fix things we do grid gap on all screet but xl screen

--- a/src/app/homepage/components/things-we-do/things-we-do.component.scss
+++ b/src/app/homepage/components/things-we-do/things-we-do.component.scss
@@ -9,7 +9,7 @@ section {
   }
 
   .services {
-    @apply relative xl:right-[-175px] xl:w-[600px] z-20 flex flex-wrap justify-center order-2 xl:order-[0] xl:grid xl:grid-rows-3 xl:grid-flow-col gap-0 xl:mt-[-2rem];
+    @apply relative xl:right-[-175px] xl:w-[600px] z-20 flex flex-wrap justify-center gap-4 order-2 xl:order-[0] xl:grid xl:grid-rows-3 xl:grid-flow-col xl:gap-0 xl:mt-[-2rem];
 
     div {
       @apply relative w-[250px] h-[250px] overflow-hidden text-white flex flex-col justify-end;
